--- a/LoanApplication/src/main/resources/static/registrationAddress.html
+++ b/LoanApplication/src/main/resources/static/registrationAddress.html
@@ -58,7 +58,7 @@
 <body>
 <h1>Address Registration</h1>
 
-<form id="addressForm" method="post" action="/process_address">
+<form id="addressForm" method="post" action="/submit_address">
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
 
@@ -66,12 +66,36 @@
     <input type="text" id="postalCode" name="postalCode" required>
 
     <label for="town">Town:</label>
-    <input type="text" id="town" name "town" required>
+    <input type="text" id="town" name="town" required>
 
     <label for="streetName">Street Name:</label>
     <input type="text" id="streetName" name="streetName" required>
 
     <input type="submit" value="Submit">
 </form>
+<script>
+        // Add an event listener to the form submission
+        document.getElementById('addressForm').addEventListener('submit', function (e) {
+        e.preventDefault(); // Prevent the default form submission
+
+        fetch('/submit_address', {
+        method: 'POST',
+        body: new FormData(document.getElementById('addressForm'))
+    })
+        .then(response => {
+        // Handle the response here, e.g., show success or error messages
+        if (response.status === 200) {
+        // Form submission was successful, redirect to registrationAddress.html
+        window.location.href = 'startingView.html';
+    } else {
+       // window.location.href = 'startingView.html';
+    }
+    })
+        .catch(error => {
+        // Handle network or server errors
+        console.error('Error:', error);
+    });
+    });
+</script>
 </body>
 </html>
