L02 adding occupation page and controller

--- a/LoanApplication/src/main/resources/static/registrationAddress.html
+++ b/LoanApplication/src/main/resources/static/registrationAddress.html
@@ -86,9 +86,9 @@
         // Handle the response here, e.g., show success or error messages
         if (response.status === 200) {
         // Form submission was successful, redirect to registrationAddress.html
-        window.location.href = 'startingView.html';
+        window.location.href = 'occupationForm.html';
     } else {
-       // window.location.href = 'startingView.html';
+        window.location.href = 'startingView.html';
     }
     })
         .catch(error => {
