--- a/LoanApplication/src/main/resources/static/occupationForm.html
+++ b/LoanApplication/src/main/resources/static/occupationForm.html
@@ -1,10 +1,109 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <style>
+    body {
+      background-image: url('/src/main/resources/coockie.png');
+      background-repeat: no-repeat;
+      background-size: cover;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    h1 {
+      text-align: center;
+      color: #fff;
+    }
+    form {
+      background-color: rgba(255, 255, 255, 0.8);
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+      padding: 20px;
+      max-width: 400px;
+      text-align: left;
+    }
+    label {
+      display: block;
+      margin-bottom: 10px;
+      color: #333;
+    }
+    input[type="text"],
+    input[type="date"],
+    input[type="date"],
+    input[type="number"],
+    input[type="number"] {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 20px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+    }
+    input[type="submit"] {
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      padding: 15px 20px;
+      border-radius: 5px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+    input[type="submit"]:hover {
+      background-color: #0056b3;
+    }
+  </style>
+  <title>Occupation form</title>
 </head>
 <body>
+<h1>Occupation Form</h1>
+<form id="occupationForm" method="post" action="/submit_occupation">
+  <label for="employeeName">Employer Name:</label>
+  <input type="text" id="EmployeeName" name="EmployeeName" required>
 
+  <label for="startDate">Date of Employment:</label>
+  <input type="date" id="startDate" name="startDate" required>
+
+  <label for="endDate">End Date of Employment:</label>
+  <input type="date" id="endDate" name="endDate" required>
+
+  <label for="grossSalary">Gross Salary:</label>
+  <input type="number" id="grossSalary" name="grossSalary" required>
+
+  <label for="netSalary">Net Salary:</label>
+  <input type="number" id="netSalary" name="netSalary" required>
+
+  <input type="submit" value="Submit">
+</form>
+<script>
+  // Add an event listener to the form submission
+  document.getElementById('occupationForm').addEventListener('submit', function (e) {
+    e.preventDefault(); // Prevent the default form submission
+
+    // Place for validation of the fields (e.g., check if fields are filled)
+
+    // If validation is successful, submit the form to the server
+    fetch('/submit_occupation', {
+      method: 'POST',
+      body: new FormData(document.getElementById('occupationForm'))
+    })
+            .then(response => {
+              // Handle the response here, e.g., show success or error messages
+              if (response.status === 200) {
+                // Form submission was successful, redirect to registrationAddress.html
+                window.location.href = 'startingView.html';
+              } else {
+               // window.location.href = 'startingView.html';
+              }
+            })
+            .catch(error => {
+              // Handle network or server errors
+              console.error('Error:', error);
+            });
+  });
+</script>
 </body>
 </html>
