--- a/LoanApplication/src/main/resources/static/registrationAddress.html
+++ b/LoanApplication/src/main/resources/static/registrationAddress.html
@@ -16,13 +16,13 @@
         }
         h1 {
             text-align: center;
-            color: #fff;
+            color:  #000;
         }
         form {
             background-color: rgba(255, 255, 255, 0.8);
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-            padding: 20px;
+            padding: 65px;
             max-width: 400px;
             text-align: left;
         }
@@ -56,9 +56,9 @@
     <title>Address Registration</title>
 </head>
 <body>
-<h1>Address Registration</h1>
-
 <form id="addressForm" method="post" action="/submit_address">
+    <h1>Address Registration</h1>
+
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
 
