--- a/LoanApplication/src/main/resources/static/registrationForm.html
+++ b/LoanApplication/src/main/resources/static/registrationForm.html
@@ -16,14 +16,14 @@
         }
         h1 {
             text-align: center;
-            color: #fff;
+            color: #000;
         }
         form {
             background-color: rgba(255, 255, 255, 0.8);
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-            padding: 20px;
-            max-width: 400px;
+            padding: 70px;
+            max-width: 320px;
             text-align: left;
         }
         label {
@@ -59,8 +59,8 @@
     <title>Registration Form</title>
 </head>
 <body>
-<h1>Registration Form</h1>
 <form id="registrationForm" method="post" action="/submit_registration">
+    <h1>Personal details</h1>
     <label for="firstName">First Name:</label>
     <input type="text" id="firstName" name="firstName" required>
 
